refactor(DestinationService): update service accordingly to dto changes